# kakarot-eth-aa

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: codecov.yaml
src/: deployer.cairo  eth_account.cairo
src/kethaa/account/: .#library.cairo  account.cairo  library.cairo
src/utils/rlp/: rlp.cairo
tests/: ethaa.py  test_ethaa.py
tests/integration/: .#test_ethaa.py  test_ethaa.py
tests/utils/: bits.py  raw_tx.py  setup.py  signer.py  u256.py
